--- a/ERecruteApp-front/src/app/criteres/criteres.component.html
+++ b/ERecruteApp-front/src/app/criteres/criteres.component.html
@@ -1,23 +1,19 @@
 
-                <!-- START BREADCRUMB -->
-                <ul class="breadcrumb">
-                  <li><a href="#">Accueil</a></li>
-                  <li class="active">Critères</li>
-                </ul>
-              <!-- END BREADCRUMB -->                                                
-                              
-              <!-- PAGE TITLE -->
-              <div class="page-title">                    
-                  <h2><span class="fa fa-columns"></span> Critères Profil</h2>
-              </div>
-              <!-- END PAGE TITLE -->                   
-              
-              <!-- PAGE CONTENT WRAPPER -->
-              <div class="page-content-wrap">
-                  
+        <!-- START BREADCRUMB -->
+        <ul class="breadcrumb">
+            <li><a href="#">Accueil</a></li>
+            <li class="active">Critères</li>
+        </ul>
+        <!-- END BREADCRUMB -->
+
+
+
+        <!-- PAGE CONTENT WRAPPER -->
+        <div class="page-content-wrap">
+            <div class="row">
                 <div class="col-md-12">
-                    <!-- START TABS -->                                
-                    <div class="panel panel-default tabs">                            
+                    <!-- START TABS -->
+                    <div class="panel panel-default tabs">
                         <ul class="nav nav-tabs" role="tablist">
                             <li class="active"><a href="#tab-first" role="tab" data-toggle="tab">Compétences</a></li>
                             <li><a href="#tab-second" role="tab" data-toggle="tab">Langues</a></li>
@@ -27,7 +23,7 @@
                             <li><a href="#tab-six" role="tab" data-toggle="tab">Type de Profil</a></li>
                             <li><a href="#tab-seven" role="tab" data-toggle="tab">Mots cles</a></li>
                             <li><a href="#tab-height" role="tab" data-toggle="tab">Societe</a></li>
-                        </ul>                            
+                        </ul>
                         <div class="panel-body tab-content">
                             <div class="tab-pane active" id="tab-first">
                                 <app-competence></app-competence>
@@ -36,7 +32,7 @@
                                 <app-langues></app-langues>
                             </div>
                             <div class="tab-pane" id="tab-third">
-                               <app-secteur-activite></app-secteur-activite>
+                                <app-secteur-activite></app-secteur-activite>
                             </div>
                             <div class="tab-pane" id="tab-fourth">
                                 <app-situation-familiale></app-situation-familiale>
@@ -46,19 +42,19 @@
                             </div>
                             <div class="tab-pane" id="tab-six">
                                 <app-type-profil></app-type-profil>
-                            </div> 
+                            </div>
                             <div class="tab-pane" id="tab-seven">
                                 <app-mot-cles></app-mot-cles>
                             </div>
                             <div class="tab-pane" id="tab-height">
-                                    <app-societe></app-societe>
-                                </div>
+                                <app-societe></app-societe>
+                            </div>
                         </div>
-                    </div>                                                   
-                    <!-- END TABS -->                        
+                    </div>
+                    <!-- END TABS -->
                 </div>
-                  
-                  
-                  
-              </div>
-              <!-- END PAGE CONTENT WRAPPER -->
+
+            </div>
+
+        </div>
+        <!-- END PAGE CONTENT WRAPPER -->
