--- a/ERecruteApp-front/src/app/register/register.component.html
+++ b/ERecruteApp-front/src/app/register/register.component.html
@@ -1,48 +1,63 @@
-<div *ngIf="isSignedUp; else signupForm">
-  Your registration is successful. Please login!
-</div>
- 
-<ng-template #signupForm>
-  <div class="row col-sm-6" style="max-width:350px;">
-    <form name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
-      <div class="form-group">
-        <label for="name">Your name</label>
-        <input type="text" class="form-control" name="name" [(ngModel)]="form.name" #name="ngModel" required />
-        <div *ngIf="f.submitted && name.invalid">
-          <div *ngIf="name.errors.required">Name is required</div>
-        </div>
-      </div>
-      <div class="form-group">
-        <label for="username">Username</label>
-        <input type="text" class="form-control" name="username" [(ngModel)]="form.username" #username="ngModel"
-          required />
-        <div *ngIf="f.submitted && username.invalid">
-          <div *ngIf="username.errors.required">Username is required</div>
-        </div>
-      </div>
-      <div class="form-group">
-        <label for="email">Email</label>
-        <input type="text" class="form-control" name="email" [(ngModel)]="form.email" #email="ngModel" required email />
-        <div *ngIf="f.submitted && email.invalid">
-          <div *ngIf="email.errors.required">Email is required</div>
-          <div *ngIf="email.errors.email">Email must be a valid email address</div>
-        </div>
-      </div>
-      <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" class="form-control" name="password" [(ngModel)]="form.password" #password="ngModel"
-          required minlength="6" />
-        <div *ngIf="f.submitted && password.invalid">
-          <div *ngIf="password.errors.required">Password is required</div>
-          <div *ngIf="password.errors.minlength">Password must be at least 6 characters</div>
-        </div>
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary">Register</button>
-        <div *ngIf="f.submitted && isSignUpFailed" class="alert alert-warning">
-          Signup failed!<br/>{{errorMessage}}
-        </div>
-      </div>
-    </form>
+<div class="login-container lightmode">
+
+
+
+  <div *ngIf="isSignedUp; else signupForm">
+    Votre inscription à été effectué avec succée. Vous pouvez se connecter!
   </div>
-</ng-template>
+
+  <ng-template #signupForm>
+    <div class="login-box animated fadeInDown">
+      <div class="login-logo"></div>
+      <div class="login-body">
+        <div class="login-title"><strong>S'inscrire</strong></div>
+        <form name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" class="form-horizontal" novalidate>
+          <div class="form-group">
+            <input type="text" class="form-control" name="name" placeholder="Votre nom" [(ngModel)]="form.name"
+              #name="ngModel" required />
+            <div *ngIf="f.submitted && name.invalid">
+              <div *ngIf="name.errors.required">Votre nom est obligatoire</div>
+            </div>
+          </div>
+          <div class="form-group">
+            <input type="text" class="form-control" name="username" placeholder="Nom d'utilisateur"
+              [(ngModel)]="form.username" #username="ngModel" required />
+            <div *ngIf="f.submitted && username.invalid">
+              <div *ngIf="username.errors.required">Votre nom d'utilisateur est obligatoire</div>
+            </div>
+          </div>
+          <div class="form-group">
+            <input type="text" class="form-control" name="email" placeholder="Adresse Email" [(ngModel)]="form.email"
+              #email="ngModel" required email />
+            <div *ngIf="f.submitted && email.invalid">
+              <div *ngIf="email.errors.required">Votre Email est obligatoire</div>
+              <div *ngIf="email.errors.email">Email n'est pas valide</div>
+            </div>
+          </div>
+          <div class="form-group">
+            <input type="password" class="form-control" name="password" placeholder="Mot de passe"
+              [(ngModel)]="form.password" #password="ngModel" required minlength="6" />
+            <div *ngIf="f.submitted && password.invalid">
+              <div *ngIf="password.errors.required">Mot de passe est obligatoire</div>
+              <div *ngIf="password.errors.minlength">Mot de passe est très court</div>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="col-md-8">
+              <a href="erecrute/auth/login" class="btn btn-link btn-block">Se connecter à un compte existant</a>
+            </div>
+            <div class="col-md-4">
+              <button class="btn btn-info btn-block">S'inscrire</button>
+              <div *ngIf="f.submitted && isSignUpFailed" class="alert alert-danger">
+                L'inscription échoué!<br />{{errorMessage}}
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+
+          </div>
+        </form>
+      </div>
+    </div>
+  </ng-template>
+</div>
