--- a/ERecruteApp-front/src/assets/css/theme-white.css
+++ b/ERecruteApp-front/src/assets/css/theme-white.css
@@ -44,11 +44,11 @@ body {
   min-height: 100%;
   padding: 0px;
   margin: 0px;
-  background: #f5f5f5 url('../img/bg.png') left top repeat;
+  background: #f5f5f5;
   position: relative;
   font-family: 'Open Sans', sans-serif;
   font-size: 12px;
-  color: #656d78;
+  color: #363535;
   overflow-x: hidden;
 }
 .body-full-height {
